# GEM

./: README.md
CMake_config/: Findassimp.cmake  Findcadmesh.cmake  cadmesh-config.cmake
GEM/: A01toGEM  CMakeLists.txt  GEMapp.cc  Makefile  cmake_install.cmake  test.out  vis.mac
GEM/include/: GEMAnalysisManager.hh  GEMCellParameterisation.hh  GEMDetectorConstMessenger.hh  GEMDetectorConstruction.hh  GEMDriftChamber.hh  GEMDriftChamberHit.hh  GEMEMPhysics.hh  GEMElectricField.hh  GEMElectricFieldMessenger.hh  GEMEmCalorimeter.hh  GEMEmCalorimeterHit.hh  GEMEventAction.hh  GEMEventActionMessenger.hh  GEMGeneralPhysics.hh  GEMHadCalorimeter.hh  GEMHadCalorimeterHit.hh  GEMHadronPhysics.hh  GEMHodoscope.hh  GEMHodoscopeHit.hh  GEMIonPhysics.hh  GEMMagneticField.hh  GEMMagneticFieldMessenger.hh  GEMMuonPhysics.hh  GEMPhysicsList.hh  GEMPrimaryGeneratorAction.hh  GEMPrimaryGeneratorMessenger.hh  GEMRun.hh  GEMRunAction.hh
GEM/src/: .nfs000000000dffa44300000001  GEMAnalysisManager.cc  GEMCellParameterisation.cc  GEMDetectorConstMessenger.cc  GEMDetectorConstruction.cc  GEMDriftChamber.cc  GEMDriftChamberHit.cc  GEMEMPhysics.cc  GEMElectricField.cc  GEMElectricFieldMessenger.cc  GEMEmCalorimeter.cc  GEMEmCalorimeterHit.cc  GEMEventAction.cc  GEMEventActionMessenger.cc  GEMGeneralPhysics.cc  GEMHadCalorimeter.cc  GEMHadCalorimeterHit.cc  GEMHadronPhysics.cc  GEMHodoscope.cc  GEMHodoscopeHit.cc  GEMIonPhysics.cc  GEMMagneticField.cc  GEMMagneticFieldMessenger.cc  GEMMuonPhysics.cc  GEMPhysicsList.cc  GEMPrimaryGeneratorAction.cc  GEMPrimaryGeneratorMessenger.cc  GEMRun.cc  GEMRunAction.cc
GEM/tmp/Linux-g++/A01app/: A01AnalysisManager.d  A01CellParameterisation.d  A01DetectorConstMessenger.d  A01DetectorConstruction.d  A01DriftChamber.d  A01DriftChamberHit.d  A01EMPhysics.d  A01EmCalorimeter.d  A01EmCalorimeterHit.d  A01EventAction.d  A01EventActionMessenger.d  A01GeneralPhysics.d  A01HadCalorimeter.d  A01HadCalorimeterHit.d  A01HadronPhysics.d  A01Hodoscope.d  A01HodoscopeHit.d  A01IonPhysics.d  A01MagneticField.d  A01MagneticFieldMessenger.d  A01MuonPhysics.d  A01PhysicsList.d  A01PrimaryGeneratorAction.d  A01PrimaryGeneratorMessenger.d  GEMAnalysisManager.d  GEMCellParameterisation.d  GEMDetectorConstMessenger.d  GEMDriftChamber.d  GEMDriftChamberHit.d  GEMEMPhysics.d  GEMEmCalorimeter.d  GEMEmCalorimeterHit.d  GEMEventAction.d  GEMEventActionMessenger.d  GEMGeneralPhysics.d  GEMHadCalorimeter.d  GEMHadCalorimeterHit.d  GEMHadronPhysics.d  GEMHodoscope.d  GEMHodoscopeHit.d  (+7 more)
GEM/tmp/Linux-g++/A01app/exe/: A01app.d
alpha/: CMakeLists.txt  Newgem.cc  README.md  vis.mac
alpha/include/: BeamAnalysisManager.hh  NewPrimaryGeneratorAction.hh  NewRun.hh  NewRunAction.hh  PSEofSecondary.hh
alpha/src/: A01DriftChamberHit.cc  NewDetectorConstruction.cc  NewPhysicsList.cc  NewPrimaryGeneratorAction.cc  NewRun.cc  NewRunAction.cc  PSEofSecondary.cc
beamtest/: Beamtest.cc  CMakeLists.txt  README.md
beamtest/include/: BeamAnalysisManager.hh  BeamDetectorConstruction.hh  BeamEnergyDetector.hh  BeamPrimaryGeneratorAction.hh  BeamRun.hh  BeamRunAction.hh
beamtest/src/: A01DriftChamber.cc  A01DriftChamberHit.cc  BeamAnalysisManager.cc  BeamDetectorConstruction.cc  BeamEnergyDetector.cc  BeamEventAction.cc  BeamPrimaryGeneratorAction.cc  BeamRun.cc  BeamRunAction.cc
drift/: .Newgem.cc.swp  CMakeLists.txt  Canvas_2.C  Canvas_4.C  Newgem.cc  copper1.gdml  drift1.gdml  kapton-air.gdml  kapton.gdml  vis.mac
drift/include/: A01DriftChamberHit.hh  BeamEventAction.hh  NewDetectorConstruction.hh
drift/src/: BeamEventAction.cc  NewDetectorConstruction.cc  NewPhysicsList.cc  NewPrimaryGeneratorAction.cc  NewRun.cc  NewRunAction.cc
gemupdate/: CMakeLists.txt  GEMapp.cc  Newgem.cc  README.md  gem.1.ele  gem.1.node  gem.gdml  run.mac  vis.mac  vis1.mac
gemupdate/include/: BeamEventAction.hh  GEMElectricField.hh  NewDetectorConstMessenger.hh  NewDetectorConstruction.hh  NewElectricField.hh  NewPhysicsList.hh  NewPrimaryGeneratorAction.hh  NewRun.hh  NewRunAction.hh  NewSteppingAction.hh
gemupdate/src/: .A01DriftChamberHit.cc.swp  BeamEventAction.cc  GEMElectricField.cc  GEMElectricFieldMessenger.cc  NewDetectorConstMessenger.cc  NewDetectorConstruction.cc  NewDetectorConstruction.cc.back  NewElectricField.cc  NewEnergyDetector.cc  NewPhysicsList.cc  NewPrimaryGenMessenger.cc  NewPrimaryGeneratorAction.cc  NewRun.cc  NewRunAction.cc  NewRunActionMessenger.cc  NewSteppingAction.cc
model/: Argon_Argon_1.stl  Argon_Argon_2.stl  Copper_Copper_1.stl  Copper_Copper_2.stl  Hole_Hole_1.stl  Hole_Hole_2.stl  Hole_Hole_3.stl  Hole_Hole_3.stp  Hole_Hole_4.stl  Hole_Hole_5.stl  Kapton_Kapton.stl  gem.stp
moreefield/: Newgem.cc  README.md
moreefield/include/: NewDetectorConstruction.hh  NewElectricField.hh  NewRun.hh  NewRunAction.hh
moreefield/src/: NewDetectorConstruction.cc  NewElectricField.cc  NewPhysicsList.cc  NewPrimaryGeneratorAction.cc  NewRunAction.cc
newgem/: CMakeLists.txt  Newgem.cc
newgem/include/: A01DriftChamberHit.hh  BeamAnalysis.hh  BeamEventAction.hh  NewDetectorConstruction.hh  NewRunAction.hh  NewRunActionMessenger.hh
newgem/src/: A01DriftChamber.cc  BeamAnalysisManager.cc  BeamEventAction.cc  NewDetectorConstruction.cc  NewEnergyDetector.cc  NewPhysicsList.cc  NewPrimaryGeneratorAction.cc  NewRunAction.cc
newgem_old/: CMakeLists.txt  Canvas_1.C  Canvas_3.C  Newgem.cc  copper2.gdml  drift2.gdml
newgem_old/include/: NewDetectorConstruction.hh  NewRunAction.hh
newgem_old/src/: BeamEventAction.cc  NewDetectorConstruction.cc  NewPhysicsList.cc  NewPrimaryGeneratorAction.cc  NewRunAction.cc
pureargon/: CMakeLists.txt  Newgem.cc  vis.mac
pureargon/include/: NewDetectorConstMessenger.hh  NewDetectorConstruction.hh  NewEnergyDetector.hh  NewPrimaryGenMessenger.hh
pureargon/src/: BeamEventAction.cc  NewDetectorConstMessenger.cc  NewDetectorConstruction.cc  NewElectricField.cc  NewPhysicsList.cc  NewPrimaryGenMessenger.cc  NewPrimaryGeneratorAction.cc  NewRunActionMessenger.cc
